Bug 506772 - Folder View widget added to Plasma panel has generic icon
Summary: Folder View widget added to Plasma panel has generic icon
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.4.80
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-07-08 18:57 UTC by Patrick Silva
Modified: 2025-07-15 10:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (1.54 MB, image/png)
2025-07-08 18:57 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-07-08 18:57:00 UTC
Created attachment 183063 [details]
screenshot

STEPS TO REPRODUCE
1. add Folder View widget to Plasma panel
2. observe the icon of the added widget
3. 

OBSERVED RESULT
generic icon seen in the attached screenshot

EXPECTED RESULT
correct icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Marco Martin 2025-07-10 14:07:14 UTC
Can reproduce, it seems something relatively recent
Comment 2 Marco Martin 2025-07-14 10:00:27 UTC
it actually does fail for some folders (deskop, files linked to activity) but for others (custom folders) the icon is correct
Comment 3 Marco Martin 2025-07-14 11:17:01 UTC
issue is introduced by  883a16eb4ac808deceddf8ac3667ee888ff8ea60 in kio. Unfortunately that commit is correct as it solves a valid problem, will have to think about a asolution for it
Comment 4 Bug Janitor Service 2025-07-14 14:28:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1931
Comment 5 Marco Martin 2025-07-15 10:43:24 UTC
Git commit 5d54a3c5a067359ba6223532d6c5158027cb40be by Marco Martin.
Committed on 15/07/2025 at 10:43.
Pushed by mart into branch 'master'.

Special case for some protocols that we know are local

We shouldn't assume urls are always remote, as things like trash://foo
or desktop://foo actually point to local files

M  +2    -0    src/core/kfileitem.cpp

https://invent.kde.org/frameworks/kio/-/commit/5d54a3c5a067359ba6223532d6c5158027cb40be