Special case for some protocols that we know are local

We shouldn't assume urls are always remote, as things like trash://foo
or desktop://foo actually point to local files

BUG:506772